@@ -1,5 +1,9 @@
 2002-11-19  Bruno Haible  <bruno@clisp.org>
 
+	* mbswidth.h (PARAMS): Remove macro.
+	(mbswidth, mbsnwidth): Use ANSI C function declarations.
+	* mbswidth.c (mbswidth, mbsnwidth): Likewise.
+
 	* gcd.h (PARAMS): Remove macro.
 	(gcd): Use ANSI C function declarations.
 	* gcd.c (gcd): Likewise.
